--- a/index.html
+++ b/index.html
@@ -1,10 +1,30 @@
 <html>
   <head>
-    <link rel="stylesheet" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" media="print" href="stylesheets/print-stylesheet.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <script src="pagedjs/paged.polyfill.js"></script> -->
   </head>
   <body>
+    <h2>Test 1</h2>
     <p>The following is an example of an annotated paragraph. Notice how margin notes are used:</p>
     <p class="annotated">Welcome to this webpage. It is a very cool webpage. <span class="sidenote">Hello! This is an example of a side note!</span> Lorem ipsum Lorem  ipsum.</p>
+    <div class="table">
+      <p>The following is an example table.</p>
+      <table>
+        <thead>
+          <tr>
+            <th>Header 1</th>
+            <th>Header 2</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>One</td>
+            <td>Two</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </body>
 </html>
