--- a/index.html
+++ b/index.html
@@ -34,5 +34,23 @@
         </tbody>
       </table>
     </div>
+
+    <div class="table">
+      <p>The following is an example table with the &ldquo;no down rule&rdquo; style (<i>i.e.</i>, no vertical lines). This can be used by adding the <code>noDownRule</code> class to the <code>table</code> element.</p>
+      <table class="noDownRule">
+        <thead>
+          <tr>
+            <th>Header 1</th>
+            <th>Header 2</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>One</td>
+            <td>Two</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </body>
 </html>
